# arboard-java

./: .gitignore  README.md  build.gradle  flake.nix  settings.gradle
.github/workflows/: main.yml
lib/: build.gradle
lib/src/main/java/io/github/imurx/arboard/: Clipboard.java  ImageData.java  Library.java
lib/src/test/java/io/github/imurx/arboard/: LibraryTest.java
native/: Cargo.toml
native/src/: clipboard.rs  imagedata.rs  lib.rs
scripts/: publish-module.gradle  publish-root.gradle
