[package]
name = "arboard-java"
version = "0.1.0"
authors = ["ImUrX <urielfontan2002@gmail.com>"]
edition = "2021"
repository = "https://github.com/ImUrX/arboard-java"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
arboard = { version = "2.0.1", features = ["wayland-data-control"] }

[lib]
crate_type = ["cdylib"]
