[package]
name = "arboard-java"
version = "0.1.0"
authors = ["ImUrX <urielfontan2002@gmail.com>"]
edition = "2021"
repository = "https://github.com/ImUrX/arboard-java"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
arboard = { version = "3.4.1", features = ["wayland-data-control"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
